Fix Google Review CTA alignment: use flexbox centering

--- a/style.css
+++ b/style.css
@@ -906,6 +906,9 @@ section::before {
 
 /* Reviews CTA */
 .reviews-cta {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
   margin-top: 48px;
   padding-top: 32px;
